refactor orders | add order method
