# gen/servergrpc/moving/order.pb.go
@@ -137,6 +137,94 @@ func (x *Order) GetAdditionalInfo() string {
 	return ""
 }
 
+type OrderRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	ID            uint64                 `protobuf:"varint,1,opt,name=ID,proto3" json:"ID,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *OrderRequest) Reset() {
+	*x = OrderRequest{}
+	mi := &file_params_order_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *OrderRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*OrderRequest) ProtoMessage() {}
+
+func (x *OrderRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_params_order_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use OrderRequest.ProtoReflect.Descriptor instead.
+func (*OrderRequest) Descriptor() ([]byte, []int) {
+	return file_params_order_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *OrderRequest) GetID() uint64 {
+	if x != nil {
+		return x.ID
+	}
+	return 0
+}
+
+type OrderResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Order         *Order                 `protobuf:"bytes,1,opt,name=Order,proto3" json:"Order,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *OrderResponse) Reset() {
+	*x = OrderResponse{}
+	mi := &file_params_order_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *OrderResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*OrderResponse) ProtoMessage() {}
+
+func (x *OrderResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_params_order_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use OrderResponse.ProtoReflect.Descriptor instead.
+func (*OrderResponse) Descriptor() ([]byte, []int) {
+	return file_params_order_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *OrderResponse) GetOrder() *Order {
+	if x != nil {
+		return x.Order
+	}
+	return nil
+}
+
 var File_params_order_proto protoreflect.FileDescriptor
 
 var file_params_order_proto_rawDesc = []byte{
@@ -184,9 +272,16 @@ var file_params_order_proto_rawDesc = []byte{
 	0x5f, 0x50, 0x68, 0x6f, 0x6e, 0x65, 0x42, 0x0b, 0x0a, 0x09, 0x5f, 0x4d, 0x6f, 0x76, 0x65, 0x46,
 	0x72, 0x6f, 0x6d, 0x42, 0x09, 0x0a, 0x07, 0x5f, 0x4d, 0x6f, 0x76, 0x65, 0x54, 0x6f, 0x42, 0x11,
 	0x0a, 0x0f, 0x5f, 0x41, 0x64, 0x64, 0x69, 0x74, 0x69, 0x6f, 0x6e, 0x61, 0x6c, 0x49, 0x6e, 0x66,
-	0x6f, 0x42, 0x24, 0x5a, 0x22, 0x2e, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65,
-	0x72, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x3b, 0x73, 0x65, 0x72,
-	0x76, 0x65, 0x72, 0x67, 0x72, 0x70, 0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6f, 0x22, 0x1e, 0x0a, 0x0c, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x12, 0x0e, 0x0a, 0x02, 0x49, 0x44, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x49,
+	0x44, 0x22, 0x4d, 0x0a, 0x0d, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x12, 0x3c, 0x0a, 0x05, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x0b, 0x32, 0x26, 0x2e, 0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74, 0x74, 0x69, 0x73,
+	0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67,
+	0x2e, 0x76, 0x31, 0x2e, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x52, 0x05, 0x4f, 0x72, 0x64, 0x65, 0x72,
+	0x42, 0x24, 0x5a, 0x22, 0x2e, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x67, 0x72, 0x70, 0x63, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x3b, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x72, 0x67, 0x72, 0x70, 0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -201,22 +296,25 @@ func file_params_order_proto_rawDescGZIP() []byte {
 	return file_params_order_proto_rawDescData
 }
 
-var file_params_order_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_params_order_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
 var file_params_order_proto_goTypes = []any{
 	(*Order)(nil),                 // 0: ingvarmattis.services.moving.v1.Order
-	(PropertySize)(0),             // 1: ingvarmattis.services.moving.v1.PropertySize
-	(OrderStatus)(0),              // 2: ingvarmattis.services.moving.v1.OrderStatus
-	(*timestamppb.Timestamp)(nil), // 3: google.protobuf.Timestamp
+	(*OrderRequest)(nil),          // 1: ingvarmattis.services.moving.v1.OrderRequest
+	(*OrderResponse)(nil),         // 2: ingvarmattis.services.moving.v1.OrderResponse
+	(PropertySize)(0),             // 3: ingvarmattis.services.moving.v1.PropertySize
+	(OrderStatus)(0),              // 4: ingvarmattis.services.moving.v1.OrderStatus
+	(*timestamppb.Timestamp)(nil), // 5: google.protobuf.Timestamp
 }
 var file_params_order_proto_depIdxs = []int32{
-	1, // 0: ingvarmattis.services.moving.v1.Order.PropertySize:type_name -> ingvarmattis.services.moving.v1.PropertySize
-	2, // 1: ingvarmattis.services.moving.v1.Order.OrderStatus:type_name -> ingvarmattis.services.moving.v1.OrderStatus
-	3, // 2: ingvarmattis.services.moving.v1.Order.MoveDate:type_name -> google.protobuf.Timestamp
-	3, // [3:3] is the sub-list for method output_type
-	3, // [3:3] is the sub-list for method input_type
-	3, // [3:3] is the sub-list for extension type_name
-	3, // [3:3] is the sub-list for extension extendee
-	0, // [0:3] is the sub-list for field type_name
+	3, // 0: ingvarmattis.services.moving.v1.Order.PropertySize:type_name -> ingvarmattis.services.moving.v1.PropertySize
+	4, // 1: ingvarmattis.services.moving.v1.Order.OrderStatus:type_name -> ingvarmattis.services.moving.v1.OrderStatus
+	5, // 2: ingvarmattis.services.moving.v1.Order.MoveDate:type_name -> google.protobuf.Timestamp
+	0, // 3: ingvarmattis.services.moving.v1.OrderResponse.Order:type_name -> ingvarmattis.services.moving.v1.Order
+	4, // [4:4] is the sub-list for method output_type
+	4, // [4:4] is the sub-list for method input_type
+	4, // [4:4] is the sub-list for extension type_name
+	4, // [4:4] is the sub-list for extension extendee
+	0, // [0:4] is the sub-list for field type_name
 }
 
 func init() { file_params_order_proto_init() }
@@ -233,7 +331,7 @@ func file_params_order_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_params_order_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   1,
+			NumMessages:   3,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
