# gen/servergrpc/moving/orders.pb.go
@@ -1,0 +1,135 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.1
+// 	protoc        v5.27.0
+// source: params/orders.proto
+
+package servergrpc
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type OrdersResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Orders        []*Order               `protobuf:"bytes,1,rep,name=Orders,proto3" json:"Orders,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *OrdersResponse) Reset() {
+	*x = OrdersResponse{}
+	mi := &file_params_orders_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *OrdersResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*OrdersResponse) ProtoMessage() {}
+
+func (x *OrdersResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_params_orders_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use OrdersResponse.ProtoReflect.Descriptor instead.
+func (*OrdersResponse) Descriptor() ([]byte, []int) {
+	return file_params_orders_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *OrdersResponse) GetOrders() []*Order {
+	if x != nil {
+		return x.Orders
+	}
+	return nil
+}
+
+var File_params_orders_proto protoreflect.FileDescriptor
+
+var file_params_orders_proto_rawDesc = []byte{
+	0x0a, 0x13, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x2e,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x1f, 0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74,
+	0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f, 0x76,
+	0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x1a, 0x12, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x6f,
+	0x72, 0x64, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x50, 0x0a, 0x0e, 0x4f, 0x72,
+	0x64, 0x65, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x3e, 0x0a, 0x06,
+	0x4f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x26, 0x2e, 0x69,
+	0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x2e, 0x4f,
+	0x72, 0x64, 0x65, 0x72, 0x52, 0x06, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x42, 0x24, 0x5a, 0x22,
+	0x2e, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67, 0x72, 0x70, 0x63,
+	0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x3b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67, 0x72,
+	0x70, 0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_params_orders_proto_rawDescOnce sync.Once
+	file_params_orders_proto_rawDescData = file_params_orders_proto_rawDesc
+)
+
+func file_params_orders_proto_rawDescGZIP() []byte {
+	file_params_orders_proto_rawDescOnce.Do(func() {
+		file_params_orders_proto_rawDescData = protoimpl.X.CompressGZIP(file_params_orders_proto_rawDescData)
+	})
+	return file_params_orders_proto_rawDescData
+}
+
+var file_params_orders_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_params_orders_proto_goTypes = []any{
+	(*OrdersResponse)(nil), // 0: ingvarmattis.services.moving.v1.OrdersResponse
+	(*Order)(nil),          // 1: ingvarmattis.services.moving.v1.Order
+}
+var file_params_orders_proto_depIdxs = []int32{
+	1, // 0: ingvarmattis.services.moving.v1.OrdersResponse.Orders:type_name -> ingvarmattis.services.moving.v1.Order
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_params_orders_proto_init() }
+func file_params_orders_proto_init() {
+	if File_params_orders_proto != nil {
+		return
+	}
+	file_params_order_proto_init()
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_params_orders_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_params_orders_proto_goTypes,
+		DependencyIndexes: file_params_orders_proto_depIdxs,
+		MessageInfos:      file_params_orders_proto_msgTypes,
+	}.Build()
+	File_params_orders_proto = out.File
+	file_params_orders_proto_rawDesc = nil
+	file_params_orders_proto_goTypes = nil
+	file_params_orders_proto_depIdxs = nil
+}
